--- a/company.css
+++ b/company.css
@@ -1,6 +1,343 @@
-h1 {
+* {
+  margin: 0;
+  padding: 0;
 }
 
+.navigation {
+  background: #222222;
+  height: 90px;
+  display: flex;
+  color: white;
+}
+
+.navigation a {
+  padding: 35px 0px 25px 40px;
+  color: white;
+  text-decoration: none;
+  font-family: "Inter";
+}
+
+.navigation img {
+  margin: 20px 200px 10px 10px;
+}
+
+.navigation a:hover {
+  text-decoration: underline;
+}
+
+.navigation h1 {
+  padding: 25px 100px 25px 25px;
+  font-family: "Inter";
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font: 16px Arial;
+}
+.autocomplete {
+  /*the container must be positioned relative:*/
+  position: relative;
+  display: inline-block;
+  margin: 25px 0px 25px 100px;
+}
+
+.autoconflict {
+  /*the container must be positioned relative:*/
+  position: relative;
+  display: inline-block;
+  margin: 25px 0px 25px 100px;
+  border-radius: 5px;
+}
+input {
+  border: 1px solid transparent;
+  background-color: black;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 5px;
+}
+input[type="text"] {
+  border-radius: 5px;
+  width: 100%;
+  background-color: black;
+  color: white;
+}
+input[type="submit"] {
+  background-color: #222222;
+  color: #222222;
+  margin: 0px 0px 0px 0px;
+  border-radius: 5px;
+}
+.autocomplete-items {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  /*position the autocomplete items to be the same width as the container:*/
+  top: 100%;
+  left: 0;
+  right: 0;
+  color: black;
+  border-radius: 5px;
+}
+.autocomplete-items div {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #fff;
+  border-bottom: 1px solid #d4d4d4;
+}
+.autocomplete-items div:hover {
+  /*when hovering an item:*/
+  background-color: #e9e9e9;
+}
+.autocomplete-active {
+  /*when navigating through the items using the arrow keys:*/
+  background-color: DodgerBlue !important;
+  color: #ffffff;
+}
+
+h1 {
+  position: absolute;
+  width: 526px;
+  height: 40px;
+  left: 440px;
+  top: 143px;
+  align-content: left;
+  /* Header 1 */
+
+  font-family: PT Serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 36px;
+  line-height: 47px;
+  color: #262626;
+}
+
+.intro {
+  position: absolute;
+  width: 557px;
+  height: 402px;
+  left: 440px;
+  top: 223px;
+
+  /* Body Text */
+
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 26px;
+  color: #262626;
+}
+
+.company {
+  position: absolute;
+  width: 393px;
+  height: 20px;
+  left: 129px;
+  top: 150px;
+  /* light header3 */
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 22px;
+  color: #262626;
+}
+
+.companyline {
+  display: block;
+  position: absolute;
+  width: 219px;
+  height: 0px;
+  left: 131px;
+  top: 182px;
+}
+
+.category {
+  position: absolute;
+  width: 393px;
+  height: 19px;
+  left: 128px;
+  top: 215px;
+
+  /* light header3 */
+
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 22px;
+
+  color: #262626;
+}
+
+.updated {
+  position: absolute;
+  width: 393px;
+  height: 18px;
+  left: 128px;
+  top: 279px;
+
+  /* light header3 */
+
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 22px;
+
+  color: #262626;
+}
+
+.share {
+  position: absolute;
+  width: 393px;
+  height: 18px;
+  left: 130px;
+  top: 381px;
+
+  /* light header3 */
+
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 22px;
+  color: #262626;
+}
+
+.fb {
+  position: absolute;
+  width: 35px;
+  height: 34px;
+  left: 144px;
+  top: 444px;
+
+  /* Subtitle */
+
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  text-transform: uppercase;
+
+  color: #262626;
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  left: 178px;
+  top: 431px;
+
+  border: 1px solid #000000;
+  box-sizing: border-box;
+}
+
+.tw {
+  position: absolute;
+  width: 35px;
+  height: 34px;
+  left: 190px;
+  top: 444px;
+
+  /* Subtitle */
+
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  text-transform: uppercase;
+  color: #262626;
+
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  left: 128px;
+  top: 431px;
+
+  border: 1px solid #000000;
+  box-sizing: border-box;
+}
+
+.primary {
+  display: flex;
+  position: absolute;
+  width: 300px;
+  height: 60px;
+  left: 128px;
+  top: 485px;
+  /* Subtitle */
+
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.link {
+  position: absolute;
+  width: 223px;
+  height: 47px;
+  left: 128px;
+  top: 486px;
+  border: 1px solid #000000;
+  box-sizing: border-box;
+  fill: white;
+}
+.email {
+  position: absolute;
+  width: 300px;
+  height: 60px;
+  left: 129px;
+  top: 1048px;
+}
+
+.column1 {
+  position: absolute;
+  width: 440px;
+  height: 430px;
+  left: 134px;
+  top: 552px;
+}
+
+.column2 {
+  position: absolute;
+  width: 440px;
+  height: 430px;
+  left: 582px;
+  top: 552px;
+}
+
+.question {
+  position: absolute;
+  width: 265px;
+  height: 31px;
+  left: 129px;
+  top: 998px;
+
+  /* Caption */
+
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 26px;
+  /* or 217% */
+
+  text-align: center;
+
+  color: #262626;
+}
 h2 {
 }
 
